<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PM-ProjectMarket</string>
    <string name="project_market">Project Market</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="notifications" tools:ignore="DuplicateDefinition">Notifications</string>
    <string name="change_profile_photo">Click for change to profile photo!</string>
    <string name="your_name">Your Name</string>
    <string name="mail_address">Mail Address</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="gallery_requestPermission">You must allow access to the gallery!</string>


    <string name="search_here">Search Here</string>

    <string name="programmingAndTeach">Programming &amp; Tech</string>
    <string name="writingAndTranslation">Writing &amp; Translation</string>
    <string name="videoAndAudio">Video &amp; Audio</string>
    <string name="data">Data</string>
    <string name="digitalMarketing">Digital Marketing</string>
    <string name="graphicsAndDesign">Graphics &amp; Design</string>


    <string-array name="categories_array">
        <item>@string/programmingAndTeach</item>
        <item>@string/writingAndTranslation</item>
        <item>@string/videoAndAudio</item>
        <item>@string/data</item>
        <item>@string/digitalMarketing</item>
        <item>@string/graphicsAndDesign</item>
    </string-array>


    <string name="regional">Regional</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="app_ver_1_0">App ver 1.0</string>
    <string name="share">SHARE</string>
    <string name="titleSentence">I can … for you. (in a sentence)</string>
    <string name="postContent">Post Content..</string>
    <string name="price">Price</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter Message</string>
    <string name="tl">TL</string>
    <string name="write_comment">Write Comment</string>
    <string name="delete_profile">DELETE ACCOUNT</string>
    <string name="get_comments">get comments</string>

    <!-- Toast Messages-->

    <string name="your_comment_has_been_sent">Your comment has been sent.</string>
    <string name="you_can_write_your_message">You can write your message..</string>
    <string name="the_post_is_successfully_deleted">The post is successfully deleted.</string>
    <string name="your_post_is_successfully_posted">Your post is successfully posted!</string>

    <string name="your_profile_is_successfully_updated">Your profile is successfully updated!</string>
    <string name="upload_failed">Upload Failed -> </string>
    <string name="email_is_required">Email is required!</string>
    <string name="password_lenght_cannot_be_shorter_than_6">Password lenght cannot be shorter than 6.</string>
    <string name="password_must_be_longer_than_6_characters">Password must be longer than 5 characters!</string>

    <string name="check_your_email_address">Check your email address!</string>
    <string name="welcome">Welcome!</string>
    <string name="opps">Opps! Something went wrong.</string>

    <string name="you_must_fill_in_the_required_fields">You must fill in the required fields!</string>
    <string name="please_wait">Please Wait!</string>


    <string name="passwords_do_not_match">Passwords do not match!</string>
    <string name="something_went_wrong">Something went wrong. Please try again later!</string>
    <string name="password_successfully_modified">Password Successfully Modified.</string>
    <string name="make_sure_you_enter_your_password_correctly">Make sure you enter your password correctly!</string>


    <string name="choose_your_language">Choose your language!</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="change">CHANGE</string>
    <string name="cancel">CANCEL</string>
    <string name="max_price">Max Price</string>
    <string name="min_price">Min Price</string>
    <string name="post_score">Post score</string>
    <string name="filter">Filter</string>


</resources>