<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/bar_post"
            android:background="?android:attr/windowBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_post"
                android:background="?android:attr/windowBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:onClick="onCloseClick"
                        android:src="@drawable/ic_close" />
                    <TextView
                        android:id="@+id/text_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:onClick="onShareClick"
                        android:text="@string/share"
                        android:textColor="#6A2E35"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/post_image"
            android:layout_width="240dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:onClick="uploadImage"
            android:scaleType="centerInside"
            android:src="@drawable/ic_add_image" />
        <EditText
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titleSentence"
            android:maxLines="2"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
        <View
            android:background="#2e2e2e"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" />
        <EditText
            android:id="@+id/text_postContent"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:hint="@string/postContent"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:scrollbars="vertical"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
        <View
            android:background="#2e2e2e"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical">
            <ListView
                android:id="@+id/lv_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:choiceMode="multipleChoice"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/text_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:maxLines="1"
                android:layout_marginTop="15dp"
                android:inputType="number"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tl"
                android:layout_marginTop="15dp"
                android:layout_marginStart="5dp"
                android:inputType="text"
                tools:ignore="TextViewEdits" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>